Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I933ba841c96f32bb402f5bfe167bf80caf4444e9

Former-commit-id: 46d8824ca93829a416bbab5e1bcc5010b0afb361

--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -988,7 +988,7 @@
     <string name="wifi_configure_settings_preference_summary_wakeup_off" msgid="5710203586018223864">"Wi‑Fi slås ikke på igjen automatisk"</string>
     <string name="wifi_access_points" msgid="5846755709207101844">"Wifi-nettverk"</string>
     <string name="wifi_menu_more_options" msgid="1236651929987819716">"Flere alternativer"</string>
-    <string name="wifi_menu_p2p" msgid="5234165837732940385">"Wifi Direct"</string>
+    <string name="wifi_menu_p2p" msgid="5234165837732940385">"Wi-Fi Direct"</string>
     <string name="wifi_menu_scan" msgid="3498653582115656526">"Skann"</string>
     <string name="wifi_menu_advanced" msgid="1940919392030994019">"Avansert"</string>
     <string name="wifi_menu_configure" msgid="352423980467311427">"Konfigurer"</string>
@@ -1167,7 +1167,7 @@
     <string name="wifi_dns2" msgid="7273133202625326148">"DNS 2 (med mindre det overstyres av privat DNS)"</string>
     <string name="wifi_gateway" msgid="3699227808616416759">"Gateway"</string>
     <string name="wifi_network_prefix_length" msgid="1003365439352276622">"Nettverksprefiks-lengde"</string>
-    <string name="wifi_p2p_settings_title" msgid="1689918226469221870">"Wifi Direct"</string>
+    <string name="wifi_p2p_settings_title" msgid="1689918226469221870">"Wi-Fi Direct"</string>
     <string name="wifi_p2p_device_info" msgid="4304362679971797283">"Enhetsinformasjon"</string>
     <string name="wifi_p2p_persist_network" msgid="7942929491568227945">"Husk denne tilkoblingen"</string>
     <string name="wifi_p2p_menu_search" msgid="8383306178784876840">"Søk etter enheter"</string>
