--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1484,7 +1484,7 @@
     <string name="dark_ui_activation_off_manual" msgid="2395333709291250065">"الإيقاف الآن"</string>
     <string name="dark_ui_activation_on_auto" msgid="4824339634784765049">"تفعيل الوضع حتى الشروق"</string>
     <string name="dark_ui_activation_off_auto" msgid="9136717444658505208">"إيقاف الوضع حتى الغروب"</string>
-    <string name="dark_ui_title" msgid="3373976268671557416">"الوضع المُعتِم"</string>
+    <string name="dark_ui_title" msgid="3373976268671557416">"الوضع الداكن"</string>
     <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"الجدول الزمني"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"مطلقًا"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"التفعيل من غروب الشمس حتى شروقها"</string>
