--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -1914,7 +1914,7 @@
     <string name="contributors_title" msgid="7965640251547037965">"Avustajat"</string>
     <string name="manual" msgid="3651593989906084868">"Käyttöopas"</string>
     <string name="regulatory_labels" msgid="5960251403367154270">"Viranomaismerkinnät"</string>
-    <string name="safety_and_regulatory_info" msgid="8285048080439298528">"Turvallisuus- ja lakiopas"</string>
+    <string name="safety_and_regulatory_info" msgid="8285048080439298528">"Turvallisuus- ja säädöstenmukaisuusopas"</string>
     <string name="copyright_title" msgid="83245306827757857">"Tekijänoikeudet"</string>
     <string name="license_title" msgid="8745742085916617540">"Käyttölupa"</string>
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ‑järjestelmäpäivitysten lisenssit"</string>
