--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -5557,7 +5557,7 @@
     <string name="contextual_card_removed_message" msgid="5755438207494260867">"Prijedlog je uklonjen"</string>
     <string name="contextual_card_undo_dismissal_text" msgid="5200381837316691406">"Poništi"</string>
     <string name="low_storage_summary" msgid="1979492757417779718">"Preostalo je malo slobodne pohrane. Iskorišteno je <xliff:g id="PERCENTAGE">%1$s</xliff:g>, a slobodno <xliff:g id="FREE_SPACE">%2$s</xliff:g>."</string>
-    <string name="contextual_card_feedback_send" msgid="7409408664417908922">"Pošalji povratne informacije"</string>
+    <string name="contextual_card_feedback_send" msgid="7409408664417908922">"Pošaljite povratne informacije"</string>
     <string name="contextual_card_feedback_confirm_message" msgid="3186334562157665381">"Želite li nam poslati povratne informacije o tom prijedlogu?"</string>
     <string name="copyable_slice_toast" msgid="1008251852798990606">"Kopirano u međuspremnik: <xliff:g id="COPY_CONTENT">%1$s</xliff:g>."</string>
     <string name="search_bar_account_avatar_content_description" msgid="880523277036898350"></string>
